--- a/README.adoc
+++ b/README.adoc
@@ -261,8 +261,8 @@ https://github.com/ChumbokIT[Github]
 |http://www.frontiersemi.com/center/home.php[Website]
 
 |Furqan Software
-|House 29 (Flat 4B), Road, 20 Rd 22, Block K, Banani, Dhaka-1213
-|
+|House 29 (Flat 4B), Road 20, Block K, Banani, Dhaka-1213
+|Go, MongoDB, Redis, RabbitMQ, ElasticSearch, PHP, Laravel, JavaScript, React, Firebase
 |https://furqansoftware.com/[Website]
 
 |===
