--- a/README.adoc
+++ b/README.adoc
@@ -506,6 +506,11 @@ https://www.linkedin.com/company/medina-tech/[LinkedIn]
 |Node.js, Vue.js, React, C++, Android, Php, Laravel, SQL
 |https://netcoden.com/[Website]
 
+| Nogor Solutions Limited
+| House No. 69 (2nd floor), Road No. 08, Block-D, Niketon, Gulshan-1, Dhaka-1212.
+| PHP(Laravel,cakePHP),Javascript(jQuery,Vue,VueX),MySQL,MongoDB,Docker
+| https://www.nogorsolutions.com[Website]
+
 |Nybbles System Limited (NybSys)
 |House: 03, Road: 08, Shahida Khan Tower (1st & 2nd Floor), Section-6, Mirpur, Dhaka 1216
 |C#, .Net Framework, Asp.Net MVC, Asp.Net Core, Java, Kotlin, Swift, Objective C, Dart, Angular JS
