--- a/README.adoc
+++ b/README.adoc
@@ -664,6 +664,11 @@ https://www.linkedin.com/company/medina-tech/[LinkedIn]
 |Java, C, C++, Android, ASP.NET
 |https://www.shebatech.com.bd/[Website]
 
+|ShellBeeHaken
+|Level 6 & 7, House 1077, Road 6A, Avenue 8, Mirpur DOHS, Dhaka 1216
+|Java, MERN, Scala, Ruby on Rails, Flutter, Typescript
+|https://shellbeehaken.com/[Website]
+
 |Silicon Orchard Limited
 |House 01, Avenue 01, Block D, Section 11, Mirpur, Dhaka 1216, Bangladesh
 |PHP, NodeJS, ReactJS, Block chain, Android, iOS
