--- a/README.adoc
+++ b/README.adoc
@@ -205,6 +205,11 @@ https://github.com/ChumbokIT[Github]
 |Java, Spring Boot, C#, .Net, Angular/Vue/JQuery
 |http://datasoft-bd.com/[Website]
 
+|Data Grid Limited
+|New Vision Twin Terrace, Suit: 1D, 68 Pioneer Road (1st Floor), Kakrail, Segun Bagicha, Dhaka-1000, Bangladesh
+|C#, .Net, Angular/Vue/JQuery
+|https://datagridltd.com/[Website]
+
 |Daffodil Software Limited (DSL)
 |DF Tower (Level: 11-A), House 11, Road 14, Dhanmondi, Dhaka-1209
 |Java, .NET, PHP, Android, iOS
